# tassistant-auth

./: .gitignore  pyproject.toml  requirements.txt  server.py
templates/: index.html
